<resources>
    <string name="app_name">Stock Note</string>

    <string name="profile">Profile</string>
    <string name="interestLoss">Interest/Loss</string>
    <string name="transactions">Transactions</string>
    <string name="portfolio">Portfolio</string>
    <string name="history">History</string>
    <string name="about_us">About Us</string>
    <string name="investingMoney">Investing Money: </string>
    <string name="totalMoney">Total Money:</string>
    <string name="interest_loss">Interest/Loss: </string>
    <string name="userInfo">User Information</string>
    <string name="accoutnInfo">Account Information</string>
    <string name="userName">User Name: </string>
    <string name="gender">Gender: </string>
    <string name="email">Email: </string>
    <string name="symbol">Symbol</string>
    <string name="quantity">Quantity</string>
    <string name="priceavg">Average</string>
    <string name="priceTransaction">Price Transaction</string>
    <string name="priceMarket">Price Market</string>
    <string name="interest">Interest</string>
    <string name="portfolioName">Portfolio Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="transctionType">Type</string>
    <string name="date">Date</string>
    <string name="confirm">CONFIRM</string>
    <string name="addPortfolio">Add</string>
    <string name="edit_portfolio">Edit</string>
    <string name="delete_portfolio">Delete</string>
    <string name="prev_close">Previous Close</string>
    <string name="open">Open</string>
    <string name="bid">Bid</string>
    <string name="ask">Ask</string>
    <string name="one_year_target">One year target</string>
    <string name="day_range">Day\'s Range</string>
    <string name="year_range">Year\'s Range</string>
    <string name="volume">Volume</string>
    <string name="avg_volume">Average Volume</string>
    <string name="market_cap">Market Capitalization</string>
    <string name="pe">PERatio</string>
    <string name="eps">EarningsShare</string>
    <string name="search_hint">Search by Stock</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="clear_transaction_history">Clear Transaction History</string>
    <string name="update_stock">Update Stocks</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="cost">Cost</string>
    <string name="time">Time</string>
</resources>
