<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/update"
        android:title="@string/update_stock" />
    <item
        android:id="@+id/clear_history_main"
        android:title="@string/clear_search_history" />
    <item
        android:id="@+id/clear_transaction_history"
        android:title="@string/clear_transaction_history" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>
